--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "@xkeshi/vue-qrcode": "^1.0.0",
         "amfe-flexible": "^2.2.1",
         "axios": "^0.21.0",
+        "moment": "^2.24.0",
         "qrcode": "^1.4.4",
         "qrcodejs2": "0.0.2",
         "vant": "^2.10.14",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
-        "moment": "^2.24.0"
+        "vuex": "^3.5.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
